--- a/src/app/components/login/page/login.component.html
+++ b/src/app/components/login/page/login.component.html
@@ -31,7 +31,7 @@
 
               <div class="row">
                 <div class="justify-content-center" style="margin: auto;">
-                  <button class="btn btn-success px-4" type="button" (click)="login()" [disabled]="loginForm.invalid">
+                  <button class="btn btn-success px-4" type="button" (click)="login()" [disabled]="loginForm.invalid" [routerLink]="['/pendu']">
                     <i class="fa fa-check-square-o"></i> OK
                   </button>
                 </div>
