feat: create page pendu
added hostlistener to get letter when user type keyboard
added condition to reveal letter if it exists
added counter for trys

--- a/src/app/components/pendu/page/pendu.component.html
+++ b/src/app/components/pendu/page/pendu.component.html
@@ -1,6 +1,9 @@
 <div class="card" style="margin:10% 10%;">
-  <div class="card-body">
-    <h1>{{randomMot?.mot}}</h1>
+  <div class="card-body" (keypress)="chooseLetter($event)">
+    <div class="row">
+      <h1 *ngFor="let lettre of motMystere"><strong>{{lettre}}</strong></h1>
+    </div>
+    <h2>{{randomMot?.mot}}</h2>
   </div>
   <div class="card-footer">
     <button class="btn btn-info" *ngIf="randomMot == undefined" (click)="randomizeMot()">Commencez</button>
