--- a/src/app/components/pendu/page/pendu.component.html
+++ b/src/app/components/pendu/page/pendu.component.html
@@ -1,14 +1,78 @@
-<div class="card" style="margin:10% 10%;">
-  <div class="card-body" (keypress)="chooseLetter($event)">
-    <div class="row">
-      <h1 *ngFor="let lettre of motMystere"><strong>{{lettre}}</strong></h1>
+<header class="app-header navbar">
+  <a class="navbar-brand" href="#">
+    <img src="../../../../assets/img/icon.png" width="35" height="30">
+
+  </a>
+  <span><strong>My app: Pendu</strong></span>
+  <ul class="nav navbar-nav ml-auto">
+    <li class="nav-item d-md-down-none">
+      Joueur: {{user.username}}
+    </li>
+    <li class="nav-item d-md-down-none">|</li>
+    <li class="nav-item d-md-down-none">
+      <strong>Essais utilisés {{essai}} / 10</strong>
+    </li>
+    <li class="nav-item d-md-down-none">|</li>
+    <li class="nav-item d-md-down-none">
+      Cette session: parties gagnées: <strong style="color: #008c69">{{partiesGagnees}}</strong> / parties jouées <strong style="color: black">{{partiestotales}}</strong>
+    </li>
+  </ul>
+</header>
+
+<div class="card text-center" style="width: 300px; height: 294px; margin: auto">
+  <div class="card-body">
+    <img *ngIf="essai == 1" src="../../../../assets/img/01.png">
+    <img *ngIf="essai == 2" src="../../../../assets/img/02.png">
+    <img *ngIf="essai == 3" src="../../../../assets/img/03.png">
+    <img *ngIf="essai == 4" src="../../../../assets/img/04.png">
+    <img *ngIf="essai == 5" src="../../../../assets/img/05.png">
+    <img *ngIf="essai == 6" src="../../../../assets/img/06.png">
+    <img *ngIf="essai == 7" src="../../../../assets/img/07.png">
+    <img *ngIf="essai == 8" src="../../../../assets/img/08.png">
+    <img *ngIf="essai == 9" src="../../../../assets/img/09.png">
+    <img *ngIf="essai == 10" src="../../../../assets/img/10.png">
+  </div>
+</div>
+
+<div class="card text-center" style="margin:5% 10% 5% 10%;">
+  <div class="card-body">
+    <div class="row text-center" style="border: 2px solid;">
+
+      <h1 *ngFor="let lettre of motMystere; let i = index">
+        <strong *ngIf="i+1 < motMystere.length">{{lettre}}-</strong>
+        <strong *ngIf="i+1 == motMystere.length">{{lettre}}</strong>
+      </h1>
+
     </div>
-    <h2>{{randomMot?.mot}}</h2>
+  </div>
+</div>%
+
+<div class="card" *ngIf="gagne" style="margin:0% 30% 0% 30%;">
+  <div class="card-header" style="background: springgreen">
+    <h4 class="modal-title text-center">Bravo {{user.username}}</h4>
+  </div>
+  <div class="card-body">
+    <p class="text-center">Vous avez trouver le mot caché!</p>
+    <p class="text-center">Si vous voulez continuer, cliquez sur "nouveau mot".</p>
   </div>
   <div class="card-footer">
-    <button class="btn btn-info" *ngIf="randomMot == undefined" (click)="randomizeMot()">Commencez</button>
-    <button class="btn btn-warning" *ngIf="randomMot != undefined" (click)="randomizeMot()">Changer le mot</button>
+    <div class="text-center">
+      <button class="btn btn-info" (click)="randomizeMot()">Continuer</button>
+    </div>
   </div>
+</div>
 
-
+<div class="card" *ngIf="perdu" style="margin:0% 30% 0% 30%;">
+  <div class="card-header" style="background: #9f191f">
+    <h4 class="modal-title text-center">Vous avez perdu {{user.username}}</h4>
+  </div>
+  <div class="card-body">
+    <p class="text-center">Vous n'avez pas trouvé le mot caché!</p>
+    <p class="text-center">Si vous voulez continuer, cliquez sur "nouveau mot".</p>
+  </div>
+  <div class="card-footer">
+    <div class="text-center">
+      <button class="btn btn-info" (click)="randomizeMot()">Continuer</button>
+    </div>
+  </div>
 </div>
