--- a/src/styles.scss
+++ b/src/styles.scss
@@ -594,8 +594,8 @@ pre code {
 
 .container-fluid {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  /*padding-right: 15px;
+  padding-left: 15px;*/
   margin-right: auto;
   margin-left: auto;
 }
@@ -12213,7 +12213,7 @@ canvas {
   align-items: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 155px;
+  width: 275px;
   height: 55px;
   padding: 0;
   margin-right: 0;
