--- a/src/app/components/documentation/page/documentation.component.html
+++ b/src/app/components/documentation/page/documentation.component.html
@@ -7,7 +7,7 @@
 
       <h3 class="text-center">Bienvenue dans My app: Pendu</h3>
       <div class="text-justify" style="margin: 0% 10% 0% 10%">
-        <p >Ce jeu est un jeu de pendu classique. Le but est de trouvé un mot en proposant des lettres.</p>
+        <p >Ce jeu est un jeu de pendu classique. Le but est de trouver un mot en proposant des lettres.</p>
         <ul>
           <li>
             Tapez la touche de la lettre souhaitée. Si la lettre en question est contenue dans le mot mystère une ou
