--- a/src/app/components/pendu/page/pendu.component.html
+++ b/src/app/components/pendu/page/pendu.component.html
@@ -26,6 +26,7 @@
 <!-- Drawing "pendu" / Dessin du "pendu" -->
 <div class="card text-center" style="width: 300px; height: 294px; margin:1% auto auto auto;">
   <div class="card-body">
+    <img *ngIf="essai == 0" src="../../../../assets/img/00.png">
     <img *ngIf="essai == 1" src="../../../../assets/img/01.png">
     <img *ngIf="essai == 2" src="../../../../assets/img/02.png">
     <img *ngIf="essai == 3" src="../../../../assets/img/03.png">
