--- a/src/app/components/documentation/page/documentation.component.html
+++ b/src/app/components/documentation/page/documentation.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="card mx-4" style="margin-top: 10%">
-    <div class="card-header" style="background: #00aced">
+  <div class="doc card mx-4">
+    <div class="card-header">
       <h1 class="text-center"><strong>Bonjour {{user.username}}</strong></h1>
     </div>
     <div class="card-body p-4">
 
       <h3 class="text-center">Bienvenue dans My app: Pendu</h3>
-      <div class="text-justify" style="margin: 0% 10% 0% 10%">
+      <div class="doctxt text-justify">
         <p >Ce jeu est un jeu de pendu classique. Le but est de trouver un mot en proposant des lettres.</p>
         <ul>
           <li>
